--- a/_dev/css/style.scss
+++ b/_dev/css/style.scss
@@ -35,7 +35,7 @@ body {
 
 body {
     font-family: Tahoma, Arial, Sans-Serif;
-    background: url(../img/starfield.jpg) center top no-repeat #000 scroll;
+    background-color: #000;
 }
 
 
