--- a/_dev/index.html.tmpl
+++ b/_dev/index.html.tmpl
@@ -117,17 +117,13 @@
                        
 
                         
-                        <h2><span>about</span></h2>
-                        <p>
-                            All quotes have been handpicked from star trek: the next generation tv show transcripts. If you missing your favourite line, file an issue or contribute here <a class="sharelink" href="https://github.com/vlad-saling/star-trek-ipsum">github repository</a>
-
-                          </p>
+          
 
 
 
                           <h2><span>live long and prosper</span></h2>
                           <p>
-                            Thanks to <a href="http://www.voyager.cz/">http://www.voyager.cz/</a> for sharing star trek stuff and to <a href="http://twitter.com/#!/Krym_sk">@Krym_sk</a> for teaching me some javascript.
+                            All quotes have been handpicked from ST:NG tv show transcripts thanks to <a href="http://www.voyager.cz/">http://www.voyager.cz/</a> sharing transcripts. Special thanks to <a href="https://twitter.com/Krym_sk">@Krym_sk</a> who thought me some javascript. Btw, here's the <a class="sharelink" href="https://github.com/vlad-saling/star-trek-ipsum">github repository</a>.
                             
                         </p>
 
