--- a/_dev/index.html.tmpl
+++ b/_dev/index.html.tmpl
@@ -13,9 +13,9 @@
         <link rel="canonical" href="http://vlad-saling.github.io/star-trek-ipsum/" />
         <link rel="alternate" href="http://vlad-saling.github.io/star-trek-ipsum/" hreflang="x-default" />
     </head>
-    <body>
+    <body class="container">
 
-        <div class="container">
+    
             <header>
         
              
@@ -24,7 +24,8 @@
                
           
             </header>
-            <div class="main" role="main">
+      
+                    <main>
                
                     <form class="stlipsum">
 
@@ -92,7 +93,7 @@
 
 
 
-                            <input class="gen" id="gen" type="button" value="make it so" />
+                            <button class="gen" id="gen" type="button">make it so</button>
                         </div>
 
                         <div class="content">
@@ -106,8 +107,10 @@
 
                       
                     </form>
+
+                    </main>
              
-            </div>
+           
             <footer>
           
                         
@@ -141,7 +144,7 @@ Made by <a class="sharelink" href="https://twitter.com/vladsaling">vlad saling</
                           </p>
          
             </footer>
-        </div>
+   
         <!--! end of #container -->
         
  
