fixing typo close #12

--- a/_dev/index.html.tmpl
+++ b/_dev/index.html.tmpl
@@ -126,7 +126,7 @@
 
                           <h2><span>live long and prosper</span></h2>
                           <p>
-                            All quotes have been handpicked from ST:NG tv show transcripts thanks to <a href="http://www.voyager.cz/">http://www.voyager.cz/</a> sharing transcripts. Special thanks to <a href="https://twitter.com/Krym_sk">@Krym_sk</a> who thought me some javascript. Btw, here's the <a class="sharelink" href="https://github.com/vlad-saling/star-trek-ipsum">github repository</a>.
+                            All quotes have been handpicked from ST:NG tv show transcripts thanks to <a href="http://www.voyager.cz/">http://www.voyager.cz/</a> sharing transcripts. Special thanks to <a href="https://twitter.com/Krym_sk">@Krym_sk</a> who taught me some javascript. Btw, here's the <a class="sharelink" href="https://github.com/vlad-saling/star-trek-ipsum">github repository</a>.
                             
                         </p>
 
