adding noopener close #13

--- a/_dev/index.html.tmpl
+++ b/_dev/index.html.tmpl
@@ -116,7 +116,7 @@
                         
                        <h2><span>set phasers to share</span></h2>
                         
-                        <p>share on: <a class="sharelink" href="https://twitter.com/share?text=Star%20Trek%20Ipsum%20placeholder%20text&url=http://star-trek-ipsum.meetpollux.com/&via=vladsaling" title="Share on Twitter" rel="nofollow" target="_blank">twitter</a> <a class="sharelink" target="_blank" href="http://www.facebook.com/sharer/sharer.php?u=http://star-trek-ipsum.meetpollux.com/">facebook</a> <a class="sharelink" href="https://plus.google.com/share?url=http://star-trek-ipsum.meetpollux.com/" target="_blank">google+</a> <a class="sharelink" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://star-trek-ipsum.meetpollux.com/" target="_blank">linkedIn</a></p>
+                        <p>share on: <a class="sharelink" href="https://twitter.com/share?text=Star%20Trek%20Ipsum%20placeholder%20text&url=http://star-trek-ipsum.meetpollux.com/&via=vladsaling" title="Share on Twitter" target="_blank" rel="noopener">twitter</a> <a class="sharelink" target="_blank" rel="noopener" href="http://www.facebook.com/sharer/sharer.php?u=http://star-trek-ipsum.meetpollux.com/">facebook</a> <a class="sharelink" href="https://plus.google.com/share?url=http://star-trek-ipsum.meetpollux.com/" target="_blank" rel="noopener">google+</a> <a class="sharelink" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://star-trek-ipsum.meetpollux.com/" target="_blank" rel="noopener">linkedIn</a></p>
                        
 
                         
