--- a/_dev/index.html.tmpl
+++ b/_dev/index.html.tmpl
@@ -8,7 +8,7 @@
         <meta name="author" content="vlad saling, https://github.com/vlad-saling">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link rel="icon" type="image/gif" href="img/treklogo.png"/>
+        <link rel="icon" type="image/png" href="img/treklogo.png"/>
         <meta name="google-site-verification" content="XxHX_8PJILjr5ED0rxjuz_vB6-kX-aPwpjFLowYjmdQ" />
         <link rel="canonical" href="http://vlad-saling.github.io/star-trek-ipsum/" />
         <link rel="alternate" href="http://vlad-saling.github.io/star-trek-ipsum/" hreflang="x-default" />
@@ -139,7 +139,7 @@
                            </p>
 
                            <p>
-Made by <a class="sharelink" href="https://twitter.com/vladsaling">vlad saling</a> in march 2012
+Made by <a class="sharelink" href="https://github.com/vlad-saling">vlad saling</a> in march 2012
                             
                           </p>
          
